--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,14 +1,6 @@
 
-# Resolve react_native_pods.rb with node to allow for hoisting
-require Pod::Executable.execute_command('node', ['-p',
-  'require.resolve(
-    "react-native/scripts/react_native_pods.rb",
-    {paths: [process.argv[1]]},
-  )', __dir__]).strip
-
-prepare_react_native_project!
-
-platform :ios, '17.0'
+require_relative '../node_modules/react-native/scripts/react_native_pods'
+platform :ios, '15.1'
 install! 'cocoapods', :deterministic_uuids => false
 
 production = ENV["PRODUCTION"] == "1"
@@ -18,13 +10,7 @@ podfile_properties = JSON.parse(File.read('./Podfile.properties.json')) rescue {
 
 target 'rn_starter_kit' do
 
-  post_integrate do |installer|
-    begin
-      expo_patch_react_imports!(installer)
-    rescue => e
-      Pod::UI.warn e
-    end
-  end
+
 
   config = use_native_modules!
 
