--- a/package.json
+++ b/package.json
@@ -11,20 +11,19 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.0.0",
-    "@react-native-community/masked-view": "0.1.11",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native-firebase/app": "21.4.0",
     "@react-native-firebase/auth": "21.4.0",
     "@react-native-firebase/firestore": "21.4.0",
     "@react-native-google-signin/google-signin": "13.1.0",
-    "@react-navigation/bottom-tabs": "7.0.0",
-    "@react-navigation/compat": "5.3.20",
-    "@react-navigation/drawer": "7.0.0",
-    "@react-navigation/native": "7.0.0",
-    "@react-navigation/stack": "7.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "add": "2.0.6",
     "moment": "2.30.1",
     "react": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "0.76.5",
     "react-native-fast-image": "8.6.3",
     "react-native-fbsdk": "3.0.0",
     "react-native-gesture-handler": "2.20.2",
